--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ts-node": "ts-node",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +22,13 @@
   },
   "homepage": "https://github.com/AventusM/full-stack-typescript-part9#readme",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
