--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ts-node": "ts-node",
-    "calculateBmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts",
-    "start": "ts-node index.ts",
+    "tsc": "tsc",
     "dev": "ts-node-dev index.ts",
-    "lint": "eslint --ext .ts ."
+    "lint": "eslint --ext .ts .",
+    "start": "node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,17 +19,17 @@
     "url": "https://github.com/AventusM/full-stack-typescript-part9/issues"
   },
   "homepage": "https://github.com/AventusM/full-stack-typescript-part9#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "typescript": "^4.1.2"
+  },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
+    "ts-node-dev": "^1.0.0"
   }
 }
