--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -21,6 +21,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./backend/tsconfig.json"
   }
 }
