--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -28,6 +28,6 @@
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "project": "./tsconfig.json"
+      "project": "./frontend/tsconfig.json"
     }
   }
