--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint --ext .ts .",
-    "start": "node build/index.js"
+    "start": "node build/src/index.js",
+    "js-dev": "tsc && node build/src/index.js"
   },
   "repository": {
     "type": "git",
